...
    <string name="cal_search">Search</string>
    <string name="cal_saving">Saving</string>
    <string name="cal_saved">Saved</string>
    <string name="cal_removing">Removing</string>
    <string name="cal_removed">Removed</string>
    <string name="cal_confirm_delete_event">Confirm delete event</string>
    <string name="cal_swipe_up_views">%1$s. Swipe up for views</string>
    <string name="cal_swipe_up_search">%1$s. Swipe up to search</string>
    <string name="cal_undo">Undo</string>
    <string name="cal_undo_message">Undo: %1$s</string>
    <string name="cal_event">Event</string>
    <string name="cal_task">Task</string>
    <string name="cal_journal">Journal</string>
...
    <string name="cal_open_quick_switcher">Open quick switcher</string>
    <string name="cal_views">Views</string>
    <string name="cal_new_item">New %1$s</string>
    <string name="cal_close">Close</string>
    <string name="cal_delete">Delete</string>
    <string name="cal_confirm_delete">Confirm %1$s</string>
    <string name="cal_open_navigation">Open navigation</string>
    <string name="cal_change_calendar_zoom">Change calendar zoom</string>
    <string name="cal_level_of_three">Level %1$d of 3</string>
    <string name="cal_label_value">%1$s: %2$s</string>
    <string name="cal_dismiss">Dismiss</string>
    <string name="cal_dismiss_sheet">Dismiss sheet</string>
    <string name="cal_continues_before">continues before</string>
...
    <string name="cal_color_gold">Gold</string>
    <string name="cal_use_color">Use %1$s color</string>
    <string name="cal_export_ics">Export ICS</string>
    <string name="cal_month_route">Month</string>
    <string name="cal_agenda_route">Agenda</string>
    <string name="cal_contacts_route">Contacts</string>
    <string name="cal_settings_route">Settings</string>
    <string name="cal_quick_add">Quick add</string>
    <string name="cal_notifications">Notifications</string>
    <string name="cal_selected_value">%1$s, %2$s</string>
    <string name="cal_event_due">due %1$s</string>
    <string name="cal_previous_month_in_sidebar">Previous month in sidebar</string>
    <string name="cal_next_month_in_sidebar">Next month in sidebar</string>
...
    <string name="cal_organize_group">ORGANIZE</string>
    <string name="cal_route_month">Month</string>
    <string name="cal_route_year">Year</string>
    <string name="cal_route_range">Range</string>
    <string name="cal_route_agenda">Agenda</string>
    <string name="cal_route_calendars">Calendars</string>
    <string name="cal_route_tasks">Tasks</string>
    <string name="cal_route_journal">Journal</string>
    <string name="cal_route_contacts">Contacts</string>
    <string name="cal_route_settings">Settings</string>
    <string name="cal_route_quick_add">Quick add</string>
    <string name="cal_route_notifications">Notifications</string>
    <string name="cal_calendars_caps">CALENDARS</string>
...
