<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="set_settings">Settings</string>
    <string name="set_display">Display</string>
    <string name="set_events_tasks">Events &amp; tasks</string>
    <string name="set_reminders">Reminders</string>
    <string name="set_calendars_sync">Calendars &amp; sync</string>
    <string name="set_data_access">Data &amp; access</string>
    <string name="set_advanced">Advanced</string>
    <string name="set_settings_settings">Settings settings</string>
...
    <string name="set_not_selected">Not selected</string>
    <string name="set_read_only">Read only</string>
    <string name="set_add_1_calendar">Add 1 calendar</string>
    <string name="set_add_1_d_calendars">Add %1$d calendars</string>
    <string name="set_connecting_progress">Connecting…</string>
    <string name="set_connect">Connect</string>
    <string name="set_section_settings">%1$s settings</string>
    <string name="set_open_in_settings">Open %1$s in %2$s settings</string>
    <string name="set_language">Language</string>
    <string name="set_choose_language">Choose Calino\'s display language.</string>
    <string name="set_permission">Permission</string>
    <string name="set_events">Events</string>
    <string name="set_tasks">Tasks</string>
...
