...
    <string name="ed_editor_due">Due</string>
    <string name="ed_editor_starts">Starts</string>
    <string name="ed_editor_ends">Ends</string>
    <string name="ed_editor_cancel">Cancel</string>
    <string name="ed_editor_save">Save</string>
    <string name="ed_editor_save_description">Save editor</string>
    <string name="ed_editor_cancel_description">Cancel editor</string>
    <string name="ed_editor_edit_event">Edit event</string>
    <string name="ed_editor_add_on_date">Add on %1$s</string>
    <string name="ed_editor_new_task">New task</string>
    <string name="ed_editor_new_entry">New entry</string>
    <string name="ed_editor_import_event_photo">Import event from photo</string>
    <string name="ed_editor_close">Close editor</string>
...
